# llm_lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.json
notebooks/: paperspace.ipynb
resources/scripts/modal/: wandb.py
src/llm_lab/: __main__.py
src/llm_lab/config/: config.py
src/llm_lab/evaluator/: evaluator.py
src/llm_lab/models/: vae.py
src/llm_lab/preprocessor/: preprocessor.py
src/llm_lab/trainer/: trainer.py
src/llm_lab/utils/: utils.py
