[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_lab"
version = "0.1.0"
description = "Open-source reimplementation of the internal tool I created for Artisight under the same name."
authors = [
    { name = "Zachary Wimpee", email = "zwimpee@gmail.com" },
]
license = { file="LICENSE" }
readme = "README.md"
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/zwimpee/llm_lab"
Documentation = "https://github.com/zwimpee/llm_lab/blob/main/README.md"


[project.optional-dependencies]
test = [
    "pytest>=5.2",
    "coverage[toml]>=5.2.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]


[project.entry-points."console_scripts"]
llm-lab = "llm_lab.__main__:main"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''